--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "knex": "^0.12.2"
   },
   "devDependencies": {
-    "electron": "^1.4.15",
+    "electron": "1.7.9",
     "electron-bin": "^0.37.3"
   }
 }
