--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-session": "^1.11.3",
     "jquery": "^3.1.1",
     "jqueryui": "^1.11.1",
-    "knex": "^0.12.2"
+    "knex": "^0.12.2",
+    "nodemailer": "^4.4.2"
   },
   "devDependencies": {
     "electron": "1.7.9",
