--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "electron_demo",
-  "version": "1.0.0",
-  "description": "",
+  "name": "qube",
+  "version": "0.5.0",
+  "description": "MITÄ VITTUA SÄ HALUAT??",
   "main": "index.js",
   "scripts": {
     "start": "electron ."
@@ -14,7 +14,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.5",
     "ejs": "^2.3.2",
-    "electron": "^1.6.2",
+    "electron": "^1.7.11",
     "express": "^4.13.0",
     "express-session": "^1.11.3",
     "jquery": "^3.1.1",
@@ -23,7 +23,7 @@
     "nodemailer": "^4.4.2"
   },
   "devDependencies": {
-    "electron": "1.7.9",
+    "electron": "1.7.11",
     "electron-bin": "^0.37.3"
   }
 }
